[project]
name = "pitch-detector"
version = "0.1.0"
description = "Program to detect musical notes in recorded audio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
